data/collection/fixes/descriptions/kotlin/KT-10136
```
annotation class A

annotation class B(val arr: Array<A> = arrayOf(A()))
```

```
1.kt:3:48: error: annotation class cannot be instantiated
annotation class B(val arr: Array<A> = arrayOf(A()))
                                               ^
```

Originally reported at http://stackoverflow.com/questions/33855843/nested-annotations-in-kotlin